--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 #ignore database folder
 sql-db/
 open-beta-routes/
+data/
+sitemap-files/
+old-files/
+webscraper-files/
+accesskeys.py
+
+__pycache__
