--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ data/
 webscraper-files/
 accesskeys.py
 .DS_Store
-.ipynb_checkpoints/
-archive/.ipynb_checkpoints/
+.ipynb_checkpoints
 
 __pycache__
